--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="image/logo smk1 2.png" alt="logo" width="37" height="37" class="rounded-circle me-2">
+        <img src="logo smk1 2.png" alt="logo" width="37" height="37" class="rounded-circle me-2">
         PORTOFOLIO
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -41,7 +41,7 @@
 
   <!-- Jumbotron -->
   <section class="jumbotron text-center mt-5 pt-5">
-    <br><br><br><img src="image/profil.jpg" alt="foto" width="230" class="rounded-circle img-thumbnail">
+    <br><br><br><img src="profil.jpg" alt="foto" width="230" class="rounded-circle img-thumbnail">
     <h1 class="display-4">Veren Anthonia Radja</h1>
     <p class="lead">Pelajar | Gamelab</p>
 
