--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="row justify-content-center fs-5">
             <div class="col-lg-6 mb-3">
               <div class="sertifikat">
-                <img src="image/sertifikat1.jpg" alt="Sertifikat" class="responsive">
+                <img src="sertifikat1.jpg" alt="Sertifikat" class="responsive">
               </div>
             </div>
             <div class="col-lg-6 mb-3">
@@ -98,7 +98,7 @@
     </div>
     <div class="col-lg-6 mb-3">
       <div class="sertifikat">
-        <img src="image/sertifikat .jpg" alt="Sertifikat" class="responsive1 img-fluid">
+        <img src="sertifikat .jpg" alt="Sertifikat" class="responsive1 img-fluid">
       </div>
     </div>
   </div>
@@ -121,7 +121,7 @@
       <div class="row">
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="image/konsul1.jpg" class="card-img-top" alt="konsul">
+            <img src="konsul1.jpg" class="card-img-top" alt="konsul">
             <div class="card-body">
               <p class="card-text">Konsultasi</p>
             </div>
@@ -130,7 +130,7 @@
 
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="image/tampilan awal.jpg" class="card-img-top" alt="Tampilan Awal">
+            <img src="tampilan awal.jpg" class="card-img-top" alt="Tampilan Awal">
             <div class="card-body">
               <p class="card-text">Tampilan Awal web </p>
             </div>
@@ -139,7 +139,7 @@
 
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="image/konsultasi.jpg" class="card-img-top" alt="Project Web">
+            <img src="konsultasi.jpg" class="card-img-top" alt="Project Web">
             <div class="card-body">
               <p class="card-text">konsultasi</p>
             </div>
@@ -164,7 +164,7 @@
       <div class="row">
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="image/flappy bird.jpg" class="card-img-top" alt="konsul">
+            <img src="flappy bird.jpg" class="card-img-top" alt="konsul">
             <div class="card-body">
               <p class="card-text">flappy bird</p>
             </div>
@@ -172,7 +172,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="image/natal ve.png" class="card-img-top" alt="Tampilan Awal">
+            <img src="natal ve.png" class="card-img-top" alt="Tampilan Awal">
             <div class="card-body">
               <p class="card-text">web natal</p>
             </div>
@@ -180,7 +180,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="image/a.jpg" class="card-img-top" alt="Project Web">
+            <img src="a.jpg" class="card-img-top" alt="Project Web">
             <div class="card-body">
               <p class="card-text">Project Web</p>
             </div>
