--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
             <div class="col-lg-6 mb-3">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum mollitia impedit sit dolorem aspernatur, doloremque, ipsam debitis praesentium nobis recusandae laboriosam, optio dignissimos quo sint sed. Earum dolorem quos hic.
+                Saya Veren Anthonia Radja siswi XI TJKT 2,telah menjadi pelajar Gamelab Indonesia sejak tanggal 4 Oktober 2024,dngan lokasi pembelajaran di Salatiga,Jawa Tengah.Dalam pembelajaran saya,saya berhasil meraih dua serifikat dengan hasil yang sangat memuaskan.Sertifikat pertama saya peroleh dengan nilai akhir 82 dan program berikutnya saya berhasil meningkatkan capaian saya dengan nilai akhir 96.Pencapaian ini mencerminkan dedikasi,semangat belajar dan komitmen saya untuk terus berkembang dalam bidang teknologi dan kejuruan.
               </p>
             </div>
           </div>
@@ -92,7 +92,7 @@
   <div class="row justify-content-center fs-5 ">
     <div class="col-lg-6 mb-3">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus temporibus officia mollitia officiis fuga alias, soluta, rem harum, beatae omnis neque magnam! Voluptas et dolorum praesentium esse aliquid pariatur aperiam.
+       Saya Veren Anthonia Radja siswi XI TJKT 2,telah menjadi pelajar Gamelab Indonesia sejak tanggal 4 Oktober 2024,dngan lokasi pembelajaran di Salatiga,Jawa Tengah.Dalam pembelajaran saya,saya berhasil meraih dua serifikat dengan hasil yang sangat memuaskan.Sertifikat pertama saya peroleh dengan nilai akhir 82 dan program berikutnya saya berhasil meningkatkan capaian saya dengan nilai akhir 96.Pencapaian ini mencerminkan dedikasi,semangat belajar dan komitmen saya untuk terus berkembang dalam bidang teknologi dan kejuruan.
            
       </p>
     </div>
