--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section class="jumbotron text-center mt-5 pt-5">
     <br><br><br><img src="profil.jpg" alt="foto" width="230" class="rounded-circle img-thumbnail">
     <h1 class="display-4">Veren Anthonia Radja</h1>
-    <p class="lead">Pelajar | Gamelab</p>
+    <p class="lead">web developer</p>
 
     <!-- Buttons -->
     <button type="button" class="btn btn-primary me-2 glow-button" data-bs-toggle="modal" data-bs-target="#cvModal1">Preview CV</button>
