--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="card">
             <img src="natal ve.png" class="card-img-top" alt="Tampilan Awal">
             <div class="card-body">
-              <p class="card-text">web natal</p>
+              <p class="card-text">web natal.jpeg</p>
             </div>
           </div>
         </div>
