--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="natal ve.png" class="card-img-top" alt="Tampilan Awal">
+            <img src="web natal.jpeg" class="card-img-top" alt="Tampilan Awal">
             <div class="card-body">
-              <p class="card-text">web natal.jpeg</p>
+              <p class="card-text">web natal.</p>
             </div>
           </div>
         </div>
