--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="web natal.jpeg" class="card-img-top" alt="Tampilan Awal">
+            <img src="natal ve.png" class="card-img-top" alt="Tampilan Awal">
             <div class="card-body">
               <p class="card-text">web natal.</p>
             </div>
