--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- Jumbotron -->
   <section class="jumbotron text-center mt-5 pt-5">
     <br><br><br><img src="profil.jpg" alt="foto" width="230" class="rounded-circle img-thumbnail">
-    <h1 class="display-4">Veren Anthonia Radja</h1>
+    <h1 class="display-4">𝓥𝓮𝓻𝓮𝓷 𝓐𝓷𝓽𝓱𝓸𝓷𝓲𝓪 𝓡𝓪𝓭𝓳𝓪</h1>
     <p class="lead">web developer</p>
 
     <!-- Buttons -->
