--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="tampilan awal.jpg" class="card-img-top" alt="Tampilan Awal">
+            <img src="konsultasi3.jpeg" class="card-img-top" alt="Tampilan Awal">
             <div class="card-body">
-              <p class="card-text">Tampilan Awal web </p>
+              <p class="card-text">Konsultasi</p>
             </div>
           </div>
         </div>
@@ -172,7 +172,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="natal ve.png" class="card-img-top" alt="Tampilan Awal">
+            <img src="web natall.jpeg" class="card-img-top" alt="Tampilan Awal">
             <div class="card-body">
               <p class="card-text">web natal.</p>
             </div>
