--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="konsultasi3.jpeg" class="card-img-top" alt="Tampilan Awal">
+            <img src="konsul3.jpeg" class="card-img-top" alt="Tampilan Awal">
             <div class="card-body">
               <p class="card-text">Konsultasi</p>
             </div>
