--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
             </li>
             <li class="mb-4 d-flex align-items-center">
               <i class="fa-solid fa-phone me-3"></i>
-              <a href="tel:+6282130344022" class="text-decoration-none text-dark">+62 821-4676-0721</a>
+              <a href="tel:+6282146760721" class="text-decoration-none text-dark">+62 821-4676-0721</a>
             </li>
             <li class="d-flex align-items-center">
               <i class="fa-solid fa-envelope me-3"></i>
-              <a href="mailto:dhevanlyadu01@gmail.com" class="text-decoration-none text-dark">radjaveren@gmail.com</a>
+              <a href="mailto:radjaveren@gmail.com" class="text-decoration-none text-dark">radjaveren@gmail.com</a>
             </li>
           </ul>
         </div>
@@ -255,7 +255,7 @@
           <iframe src="https://drive.google.com/file/d/1fXAF6MCISjXeSEHQhFJQyNdHqdppyeWY/preview" width="100%" height="480" allow="autoplay"></iframe>
         </div>
         <div class="modal-footer">
-          <a href="https://drive.google.com/file/d/1i72DxLZc8ZeOmQuv-RKjNBfHf4sIrhjM/view?usp=sharing" class="btn btn-primary">Download</a>
+          <a href="https://drive.google.com/file/d/1fXAF6MCISjXeSEHQhFJQyNdHqdppyeWY/preview" class="btn btn-primary">Download</a>
         </div>
       </div>
     </div>
