--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <iframe src="https://drive.google.com/file/d/1SdVCDUmHxATolcaXsTFSIZ38ZFFXpkQH/preview"  width="100%" height="480" allow="autoplay"></iframe>
         </div>
         <div class="modal-footer">
-          <a href="https://drive.google.com/file/d/1a_OXYpe5IdbdgBurFBMtydqVKVKi5QGI/view?usp=sharing" class="btn btn-primary">Download</a>
+          <a href="https://drive.google.com/file/d/1SdVCDUmHxATolcaXsTFSIZ38ZFFXpkQH/preview" class="btn btn-primary">Download</a>
         </div>
       </div>
     </div>
