--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </section>
   <!-- End About -->
     <section id="gallery" class="gallery">
-        <div class="container">
+        <div class="container"data-aos="fade-up">
           <div class="row text-center mb-3">
             <div class="col">
           <h2>My Galery</h2>
