--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
   <!-- End Project -->
     <!-- Project Section 2-->
   <section id="Project" class="py-5 mt-5">
-    <div class="container"data-aos="fade-up">
+    <div class="container"data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">
       <div class="row text-center mb-3">
         <div class="col">
           <br>
