--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
 </section>
   <!-- End About -->
     <section id="gallery" class="gallery">
-        <div class="container"data-aos="fade-up">
+        <div class="container"data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">
           <div class="row text-center mb-3">
             <div class="col">
           <h2>My Galery</h2>
