--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
   <!-- End Jumbotron -->
 <!-- About Start -->
   <section id="about">
-        <div class="container">
+        <div class="container" data-aos="fade-up"
+     data-aos-duration="3000">
           <div class="row text-center mb-3">
             <div class="col">
               <h2 class="heading"><i class="fas fa-user-alt"></i> About <span>Me</span></h2>
