--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <iframe src="https://drive.google.com/file/d/14QXMZcFzPLlFjM4TNw7_5x_5vmaeQTOv/preview"  width="100%" height="480" allow="autoplay"></iframe>
         </div>
         <div class="modal-footer">
-          <a href=="https://drive.google.com/file/d/14QXMZcFzPLlFjM4TNw7_5x_5vmaeQTOv/preview" class="btn btn-primary">Download</a>
+          <a href="https://drive.google.com/file/d/14QXMZcFzPLlFjM4TNw7_5x_5vmaeQTOv/view?usp=sharing" class="btn btn-primary">Download</a>
         </div>
       </div>
     </div>
